Bugfix: Prevent image overflow in Blog articles

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -277,6 +277,14 @@ body.admin-bar {
 	width: 100% !important;
 }
 
+.post,
+.post-thumbnail {
+	img {
+		max-width: 100%;
+		height: auto;
+	}
+}
+
 // Credit: Nicolas Gallagher and SUIT CSS.
 .embed-responsive {
 	position: relative;
